--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/SarahV2/UD_Coffee_Shop#readme",
   "dependencies": {
     "config": "^3.3.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0"
   }
 }
